Added model into app.py, restructured files, next step is to work on html file to allow user input

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,10 @@
 
     <body>
         <h1 class="text-center">Maternal Health Risk Prediction Model</h1>
+
+        <form class-"text-center" action='/' method="post">
+            <input class="form-control" name="age">
+            <input class="btn btn-primary mt-3" type="submit" value="Predict Risk">
+        </form>
     </body>
 </html>
