--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 
     <body>
         <div class="navbar">
-            <ul>
+            <ul class="navli">
                 <li class="active"><a href="">Home</a></li>
                 <li class="active"><a href="/data">Data Details</a></li>
                 <li class="active"><a href="/model">Model Details</a></li>
@@ -45,6 +45,8 @@
 
             <br>
             {{ prediction_text }}
+
+            <h5>Trevor Beesley  </h5>   
 
         </div>
 
