--- a/templates/model_details.html
+++ b/templates/model_details.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="UTF-8">
+        <title>Maternal Health Risk Prediction Model</title>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css')}}"> 
     </head>
-
     <body>
-        <h3>Check if this works too!</h3>
+        <div class="navbar">
+            <ul class="navli">
+                <li class="active"><a href="http://127.0.0.1:5000/">Home</a></li>
+                <li class="active"><a href="/data">Data Details</a></li>
+                <li class="active"><a href="/model">Model Details</a></li>
+            </ul>
+
+            <h5>Trevor Beesley  </h5>
+
+        </div>
+    </body>
 </html>
