--- a/templates/model_details.html
+++ b/templates/model_details.html
@@ -13,6 +13,21 @@
                 <li class="active"><a href="/model">Model Details</a></li>
             </ul>
 
+            <p class="datap">Using the dataset mentioned on the Data Details page, I used SKLearn's Random Forest Classifier Algorithm along with many other tools
+                to predict maternal health risk with an accuracy of 87%. Using the dataset, a user can enter health related information and get a prediction
+                on their maternal risk level. It is important to note that this model should not be used as a primary source of determining maternal health risk 
+                as it does not have a 100% accuracy but can be a helpful suplementary resource.
+            </p>
+
+            <p>To see a breakdown of how each feature may determine maternal health risk, look at the figures below:
+            </p>    
+
+            <img src="static/images/visuals.png", class="center">
+
+            <p>For more information on the project, visit my github repo linked below:</p>
+
+            <a href="https://github.com/teesley/Health-Risk-Regression.git", class="link">Trevor Beesley (teesley) Health Risk Regression Github Repository</a>
+
             <h5>Trevor Beesley  </h5>
 
         </div>
